--- a/shared/Week4_disc_analysis_with_code.Rmd
+++ b/shared/Week4_disc_analysis_with_code.Rmd
@@ -328,7 +328,7 @@ If you use the `ROCR` package:
 * For Logistic regression, use the predicted probabilities in the `prediction()` (and not the round values "0" or "1"). 
 * For LDA and QDA, put `pred.lda$posterior[,2]` in the `prediction()` function (those are the posterior probabilities that observations belong to class "1").
 
-```{r eval=F, echo=F}
+```{r eval=F, echo=T}
 # ROC
 library(ROCR)
 
